--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,80 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 29.26px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #5f3473;
+}
+
+.skill-badge {
+  background-color: #eff3ff;
+  color: #2e279d;
+  padding: 0.25rem 0.5rem;
+  border-radius: 9999px;
+  font-size: 0.75rem;
+}
+
+.custom-title-button {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19.5px;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  width: 240px;
+  gap: 0px;
+  opacity: 0px;
+}
+
+.marginTopandBottom {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.table-header {
+  border-width: 1px 0px 1px 0px;
+  border-style: solid;
+  border-color: #bababa;
+  background: #f5f5f5;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 17.07px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  border-top-left-radius: 0.5rem !important;
+  border-top-right-radius: 0.5rem !important;
+}
+
+.table-cell {
+  border-width: 1px 0px 1px 0px;
+  border-style: solid;
+  border-color: #bababa;
+}
+
+.custom-heading {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 17.07px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+
+.margin-bottom-120 {
+  margin-bottom: 120px !important;
+}
+
+.text-custom-color {
+  color: #4B4B4B;
+}
